--- a/trunk/configs/boards/XIAOMI/MI-R3G/kernel-3.4.x.config
+++ b/trunk/configs/boards/XIAOMI/MI-R3G/kernel-3.4.x.config
@@ -2179,3 +2179,8 @@ CONFIG_RA_HW_NAT_WIFI=y
 # Ralink Peripheral Devices
 #
 CONFIG_MTK_XHCI=y
+CONFIG_NETFILTER_NETLINK=m
+CONFIG_NETFILTER_NETLINK_QUEUE=m
+CONFIG_NETFILTER_XT_TARGET_NFQUEUE=m
+CONFIG_IP_NF_QUEUE=m
+CONFIG_IP6_NF_QUEUE=m
